Fix ErrorProne ClassNewInstance: use getDeclaredConstructor().newInstance().